[gd_scene load_steps=4 format=3 uid="uid://l1faff1x55u7"]

[ext_resource type="Script" path="res://Interface/GUI.gd" id="1_8d3ng"]
[ext_resource type="Texture2D" uid="uid://bue6u7axbhruh" path="res://Interface/playbutton.png" id="2_h2nvb"]
[ext_resource type="Texture2D" uid="uid://8xj5oakudw6c" path="res://World/Maps/Common/background_snow.png" id="3_1hgcp"]

[node name="GUI" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_8d3ng")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="PlayButton" type="TextureButton" parent="CanvasLayer"]
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -27.0
offset_top = 214.0
offset_right = -11.0
offset_bottom = 230.0
grow_horizontal = 0
grow_vertical = 2
texture_normal = ExtResource("2_h2nvb")

[node name="VictoryPanel" type="ColorRect" parent="CanvasLayer"]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.733333)

[node name="RichTextLabel" type="RichTextLabel" parent="CanvasLayer/VictoryPanel"]
layout_mode = 0
offset_right = 320.0
offset_bottom = 240.0
bbcode_enabled = true
text = "



[center]Parabéns!

Você venceu!"

[node name="Background" type="ParallaxBackground" parent="CanvasLayer"]

[node name="ParallaxLayer" type="ParallaxLayer" parent="CanvasLayer/Background"]
motion_mirroring = Vector2(320, 0)

[node name="BackgroundSnow" type="Sprite2D" parent="CanvasLayer/Background/ParallaxLayer"]
position = Vector2(160, 120)
texture = ExtResource("3_1hgcp")

[connection signal="button_up" from="CanvasLayer/PlayButton" to="." method="_on_play_button_button_up"]
